--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,24 @@ server:
 
 spring:
   kafka:
+    # 单次/批量消费
+    listener:
+      type: batch
+
     producer:
       bootstrap-servers: localhost:9093,localhost:9094,localhost:9095
+      # 全局序列化方式
+      key-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+      acks: all
+
     consumer:
       bootstrap-servers: localhost:9093,localhost:9094,localhost:9095
+      key-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      # 是否开启自动提交 进行消费掉
+      enable-auto-commit: false
+      auto-offset-reset: latest
+      # 批量消费时最大拉取记录条数
+      max-poll-records: 2
+
